--- a/huangpuGo/mainsite/templates/map.html
+++ b/huangpuGo/mainsite/templates/map.html
@@ -5,9 +5,13 @@
   <title>HuangpuGo</title>
 
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <link rel="stylesheet" type="text/css" href="{% static 'map.css' %}">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <link rel="stylesheet" href="{% static '/L.Control.Sidebar.css'%}" />
+  <link rel="stylesheet" href="{% static '/L.Control.Sidebar.css' %}" />
+
+  <link rel="stylesheet" type="text/css" href="{% static '/map.css' %}">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
   integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
   crossorigin=""/>
@@ -20,12 +24,20 @@
   <div class='button-group'>
     <button id='fitBounds-btn'>回到黃埔新村</button>
   </div> 
-  <div id="map"></div>
+  
 
- 
+  
+  <div id="map"></div>
+  <div id="sidebar" class="leaflet-sidebar collapsed">
+    
+  </div>
+  
+  
+<script src="{% static "/L.Control.Sidebar.js"%}"></script>
   
 
   <script type="text/javascript">
+
     let map = L.map('map').setView([
         22.618794358690458, // latitude(緯度)
         120.36315781103444 // longitude(經度)
@@ -46,13 +58,81 @@ document.getElementById("fitBounds-btn").addEventListener("click", function () {
   ]);
 });
 
+var room = new L.Icon({
+  iconUrl: '{% static "img/home.png"%}',
+  shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
+   iconSize: [60, 60],
+   iconAnchor: [50, 50],
+   popupAnchor: [1, -34],
+   shadowSize: [41, 41]
+});
 
+
+//<a href='https://pngtree.com/so/facebook'>facebook png from pngtree.com/</a>
 {% for data in datas%}
-  let store{{data.id}} = L.marker([{{data.lat}}, {{data.lon}}])
-  store{{data.id}}.addTo(map);
-  store{{data.id}}.bindPopup("{{data.name}}")
-{% endfor %}
 
+  var roomPopup{{data.id}}='<h2>{{ data.name }}</h2>\
+  <br>{{data.note}}</br>\
+  <br>社群媒體</br> \
+  {% if data.FBLink != None and data.IGLink == None and data.OtherLink == None%} \
+  <a href="{{ data.FBLink }}"><img src="{% static "img/FB.png"%}" style="width:25px;height:25px;"></a> \
+  {% endif %}\
+  {% if data.FBLink == None and data.IGLink != None and data.OtherLink == None%} \
+  <a href="{{ data.IGLink }}"><img src="{% static "img/IG.png"%}" style="width:25px;height:25px;"></a> \
+  {% endif %}\
+  {% if data.FBLink == None and data.IGLink == None and data.OtherLink != None%} \
+  <a href="{{ data.OtherLink }}"><img src="{% static "img/OtherLink.png"%}" style="width:25px;height:25px;"></a> \
+  {% endif %}\
+  {% if data.FBLink != None and data.IGLink != None and data.OtherLink == None%} \
+  <a href="{{ data.FBLink }}"><img src="{% static "img/FB.png"%}" style="width:25px;height:25px;"></a><a href="{{ data.IGLink }}"><img src="{% static "img/IG.png"%}" style="width:25px;height:25px;"></a> \
+  {% endif %}\
+  {% if data.FBLink == None and data.IGLink != None and data.OtherLink != None%} \
+  <a href="{{ data.IGLink }}"><img src="{% static "img/IG.png"%}" style="width:25px;height:25px;"></a><a href="{{ data.OtherLink }}"><img src="{% static "img/OtherLink.png"%}" style="width:25px;height:25px;"></a> \
+  {% endif %}\
+  {% if data.FBLink != None and data.IGLink == None and data.OtherLink != None%} \
+  <a href="{{ data.FBLink }}"><img src="{% static "img/FB.png"%}" style="width:25px;height:25px;"></a><a href="{{ data.OtherLink }}"><img src="{% static "img/OtherLink.png"%}" style="width:25px;height:25px;"></a> \
+  {% endif %}\
+  {% if data.FBLink != None and data.IGLink != None and data.OtherLink != None%} \
+  <a href="{{ data.FBLink }}"><img src="{% static "img/FB.png"%}" style="width:25px;height:25px;"></a><a href="{{ data.IGLink }}"><img src="{% static "img/IG.png"%}" style="width:25px;height:25px;"></a><a href="{{ data.OtherLink }}"><img src="{% static "img/OtherLink.png"%}" style="width:25px;height:25px;"></a> \
+  {% endif %}\
+    ';
+
+  var room{{data.id}} = L.marker([{{data.lat}}, {{data.lon}}],{icon:room})
+  .addTo(map)
+  .bindPopup(roomPopup{{data.id}});
+
+  {% endfor %}
+
+//   map.locate({setView: true, maxZoom: 16});
+//   function onLocationFound(e) {
+//     var radius = e.accuracy;
+
+//     L.marker(e.latlng).addTo(map)
+//         .bindPopup("You are within " + radius + " meters from this point").openPopup();
+
+//     L.circle(e.latlng, radius).addTo(map);
+// }
+
+// map.on('locationfound', onLocationFound);
+// function onLocationError(e) {
+//     alert(e.message);
+// }
+
+// map.on('locationerror', onLocationError);
+</script>
+
+
+<script>
+  var sidebar = L.control.sidebar('sidebar', {
+    position: 'left'
+   });
+
+  map.addControl(sidebar);
+      setTimeout(function () {
+      sidebar.show();
+  },);
+
+  
 </script>
 </body>
 </html>
